// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OneOfAnt should render a radio button group by default 1`] = `
<RadioGroup
  buttonStyle="outline"
  disabled={false}
  id="id-test_radio_of_one"
  label="Select one of"
  onChange={[Function]}
  readOnly={false}
>
  <Radio
    key="b"
    type="radio"
    value="b"
  >
    Banana
  </Radio>
  <Radio
    key="a"
    type="radio"
    value="a"
  >
    Apples
  </Radio>
  <Radio
    key="p"
    type="radio"
    value="p"
  >
    Peaches
  </Radio>
</RadioGroup>
`;

exports[`OneOfDropDownAnt should render a dropdown control 1`] = `
<Dropdown
  disabled={false}
  label="Select one of"
  mouseEnterDelay={0.15}
  mouseLeaveDelay={0.1}
  overlay={
    <Menu>
      <MenuItem
        onClick={[Function]}
      >
        Banana
      </MenuItem>
      <MenuItem
        onClick={[Function]}
      >
        Apples
      </MenuItem>
      <MenuItem
        onClick={[Function]}
      >
        Peaches
      </MenuItem>
    </Menu>
  }
  placement="bottomLeft"
  trigger={
    Array [
      "click",
    ]
  }
>
  <Button
    block={false}
    ghost={false}
    htmlType="button"
    id="id-test_drop_down_of_one"
    loading={false}
    style={
      Object {
        "alignItems": "center",
        "display": "inline-flex",
        "justifyContent": "space-between",
      }
    }
  >
    <span
      style={
        Object {
          "color": "#aaaaaa",
        }
      }
    >
      ...
    </span>
     
    <Icon
      type="down"
    />
  </Button>
</Dropdown>
`;

exports[`OneOfDropDownFormAnt should render a dropdown control with form 1`] = `
<FormItemAnt
  operation="bound OneOfImpl"
>
  <OneOfDropDownAnt
    disabled={false}
    id="id-test_drop_down_of_one"
    operation="bound OneOfImpl"
    readOnly={false}
  />
</FormItemAnt>
`;

exports[`OneOfFormAnt should render a radio button group with form by default 1`] = `
<FormItemAnt
  operation="bound OneOfImpl"
>
  <OneOfAnt
    disabled={false}
    id="id-test_radio_of_one"
    operation="bound OneOfImpl"
    readOnly={false}
  />
</FormItemAnt>
`;

exports[`OneOfSelectAnt should render a select control 1`] = `
<Select
  choiceTransitionName="zoom"
  disabled={false}
  id="id-test_select_of_one"
  label="Select one of"
  mode="default"
  onChange={[Function]}
  placeholder="..."
  showSearch={false}
  transitionName="slide-up"
>
  <Option
    key="b"
    value="b"
  >
    Banana
  </Option>
  <Option
    key="a"
    value="a"
  >
    Apples
  </Option>
  <Option
    key="p"
    value="p"
  >
    Peaches
  </Option>
</Select>
`;

exports[`OneOfSelectFormAnt should render a select control with form 1`] = `
<FormItemAnt
  operation="bound OneOfImpl"
>
  <OneOfSelectAnt
    disabled={false}
    id="id-test_select_of_one"
    operation="bound OneOfImpl"
    readOnly={false}
  />
</FormItemAnt>
`;
